# vinbig-reproduction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cxr_detection_replication/configs/: custom_imports.py
cxr_detection_replication/configs/vindrcxr/: detectors.py  faster-rcnn_finetuned.py  grid_rcnn.py  vfnet_finetuned.py  vindrcxr_co_dino_swin_l_16e.py  vindrcxr_co_dino_swin_l_25e_aug2.py  vindrcxr_detr_r50_aggressive.py  vindrcxr_detr_r50_compatible.py  vindrcxr_detr_r50_fixed.py  vindrcxr_detr_r50_improved.py  vindrcxr_detr_r50_improved_aug_150e.py  vindrcxr_yolov5_x.py  vindrcxr_yolov5_x_finetuned.py  vindrcxr_yolov8_x.py
cxr_detection_replication/efficientdet/: =0.4.12  =2.0.2  pilcheck.py  remap_coco_annotations.py  train.py  train_cv.py  visualize.py
cxr_detection_replication/efficientdet/effdet/: factory.py
cxr_detection_replication/efficientdet/effdet/data/: calculate_mean_std.py  dataset.py  dataset_config.py  dataset_factory.py  loader.py  transforms.py
cxr_detection_replication/projects/CO_DETR/: __init__.py
cxr_detection_replication/projects/CO_DETR/codetr/: __init__.py  co_atss_head.py  co_dino_head.py  co_roi_head.py  codetr.py  (+1 more)
cxr_detection_replication/retmed/: visualisation.ipynb
cxr_detection_replication/retmed/datasets/: vindrcxr.py
cxr_detection_replication/retmed/models/: __init__.py  tta.py
cxr_detection_replication/retmed/utils/: convert.py  ensemble.py  generate_test_predictions.py  preprocessing.py  tta_patch.py  utils.py  vindrcxr2kaggle.py
cxr_detection_replication/tools/: test.py  train.py
(+10 files in other folders)
