[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr_detection_replication"
version = "0.1.0"
description = "Unified CXR detection project with EfficientDet and MMDetection tools"
authors = [
    {name = "Sahand.M.F", email = "sahandmf99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "timm==1.0.20",
    "pyyaml>=6.0",
    "numpy==1.23.5",
    "pycocotools>=2.0.2",
    "omegaconf>=2.0",
    "tqdm>=4.65.0",
    "opencv-python<4.11",
    "pillow>=9.5.0",
    "matplotlib<3.9",
    "pandas<2.2",
    "scikit-learn>=1.0.0",
    "scikit-image<0.24",
    "scipy<1.13",
    "albumentations==1.3.1",
    "ensemble-boxes",
    "wandb"
] 

[project.optional-dependencies]
# Installed via openmim typically; kept optional to avoid strict resolver issues.
mmdet_stack = [
    "mmengine>=0.7",
    "mmcv==2.0.1",
    "mmdet==3.3.0",
    "mmyolo>=0.6.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["cxr_detection_replication*"], exclude = ["**/data/**", "**/work_dirs/**", "**/output/**"] } }